plugins {
	id 'java'
	id 'org.springframework.boot' version '3.3.1'
	id 'io.spring.dependency-management' version '1.1.7'
	id 'com.diffplug.spotless' version '6.25.0'
	id 'checkstyle'
	id 'jacoco'
	id 'org.sonarqube' version '4.4.1.3373'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'
description = 'Water Level Monitoring Backend API'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	// JWT Dependencies
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.3'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Documentation
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.2.0'

	// MQTT Dependencies
	implementation 'org.springframework.integration:spring-integration-mqtt'
	implementation 'org.eclipse.paho:org.eclipse.paho.client.mqttv3:1.2.5'

	// Rate Limiting
	implementation 'com.bucket4j:bucket4j-core:8.7.0'
	
	// Caching (for rate limiting with TTL)
	implementation 'com.github.ben-manes.caffeine:caffeine:3.1.8'

	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	runtimeOnly 'com.h2database:h2'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	finalizedBy jacocoTestReport
}

// Spotless Configuration
spotless {
	java {
		googleJavaFormat()
		removeUnusedImports()
		trimTrailingWhitespace()
		endWithNewline()
	}
}

// Checkstyle Configuration
checkstyle {
	toolVersion = '10.12.4'
	configFile = file("${rootProject.projectDir}/config/checkstyle/checkstyle.xml")
}

// Jacoco Configuration
jacoco {
	toolVersion = "0.8.10"
}

jacocoTestReport {
	reports {
		xml.required = true
		csv.required = false
		html.outputLocation = layout.buildDirectory.dir('jacocoHtml')
	}
}

// SonarQube Configuration
sonar {
	properties {
		property "sonar.projectKey", "water-level-monitoring-backend"
		property "sonar.projectName", "Water Level Monitoring Backend"
		property "sonar.host.url", "https://sonarcloud.io"
		property "sonar.organization", "aliyahyaoui"
		
		def sonarToken = System.getenv("SONAR_TOKEN")
		if (sonarToken) {
			property "sonar.token", sonarToken
		}
		
		property "sonar.coverage.jacoco.xmlReportPaths", "${layout.buildDirectory.get()}/reports/jacoco/test/jacocoTestReport.xml"
		property "sonar.gradle.skipCompile", "true"
		property "sonar.java.source", "21"
		property "sonar.java.checkstyle.reportPaths", "${layout.buildDirectory.get()}/reports/checkstyle/main.xml"
		property "sonar.sources", "src/main/java"
		property "sonar.tests", "src/test/java"
		property "sonar.exclusions", "**/generated/**,**/build/**,**/*.gradle,**/gradlew*"
		property "sonar.test.exclusions", "**/*Test.java,**/*Tests.java"
	}
}

tasks.named('sonar') {
	dependsOn checkstyleMain, test, jacocoTestReport
}
tasks.register('verify') {
	dependsOn clean, spotlessCheck, checkstyleMain, test, jacocoTestReport
	description = 'Runs all verification tasks'
}

tasks.register('applyFormatting') {
	dependsOn spotlessApply
	description = 'Applies code formatting'
}
